test/parse/relaxed/bad/eofinheadercomment.cnf
c no new-line at the end of this line